# Nexusupi

./: .env.example  .gitignore  ARCHITECTURE.md  DECISIONS.md  INTEGRATION_REPORT.md  PROJECT.md  PROJECT_EXPLANATION.md  README.md  REVIEW.md  TASKS.md  alembic.ini  cloudrun.env.yaml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 8e7c3faf48f6_c1_async_migration_setup.py  a80b98eb5058_add_jobs_table.py
app/: __init__.py  main.py
app/api/routes/: __init__.py  auth.py  credits.py  health.py  oauth.py  product.py
app/core/: __init__.py  config.py  database.py  dependencies.py  logging.py  redis.py  security.py
app/jobs/: __init__.py  worker.py
app/middleware/: __init__.py  error_handler.py  logging_middleware.py  rate_limit.py
app/models/: __init__.py  base.py  credit_transaction.py  job.py  organisation.py  user.py
app/services/: __init__.py  credit_service.py
frontend/: README.md  app.js  index.html  styles.css
tests/: conftest.py  test_a1_imports.py  test_a2_config.py  test_a3_logging.py  test_a4_database.py  test_b1_organisation_model.py  test_b2_user_model.py  test_b3_credit_transaction_model.py  test_c2_jwt_security.py  test_c3_auth_dependency.py  test_c4_me_endpoint.py  test_d1_credit_grant.py  test_d2_credit_balance.py  test_d3_deduct_credits.py  test_e1_analyse_endpoint.py  test_e2_summarise_endpoint.py  test_f1_job_status_endpoint.py  test_failure_modes.py  test_g1_rate_limit.py  test_h1_error_handling.py
